# pick-photo

./: .dockerignore  .gitignore  AGENTS.md  PRD.md  README.md  docker-compose.yml
.agents/skills/project-harness/: SKILL.md
apps/ai/: .dockerignore  Dockerfile  README.md  pyproject.toml
apps/ai/app/: local_ai.py  main.py  schemas.py  storage.py
apps/ai/tests/: test_ai_contract.py  test_local_ai.py  test_storage.py
apps/backend/: .dockerignore  .prettierignore  Dockerfile  README.md  package-lock.json  package.json  prisma.config.ts
apps/backend/prisma/: schema.prisma
apps/backend/src/: app.module.ts  main.ts  openapi.ts
apps/backend/test/: photos.e2e-spec.ts  swagger.e2e-spec.ts
apps/mobile/: README.md  pubspec.yaml
apps/mobile/lib/: main.dart
apps/mobile/linux/: CMakeLists.txt
apps/mobile/test/: photo_flow_api_test.dart  photo_flow_screen_test.dart  photo_flow_state_test.dart  (+1 more)
database/: README.md
database/migrations/: 001_initial_schema.sql
database/seeds/: README.md
docs/contracts/: ai-service.md  api.md  data-model.md  privacy.md
flutter_app/: pubspec.yaml
flutter_app/lib/: main.dart
flutter_app/linux/: my_application.cc
flutter_app/test/: photo_flow_api_test.dart  photo_flow_screen_test.dart  photo_flow_state_test.dart  widget_test.dart
flutter_app/web/: manifest.json
nestjs_server/: package-lock.json  package.json
nestjs_server/src/: main.ts  openapi.ts
nestjs_server/test/: photos.e2e-spec.ts
python_ai_server/: pyproject.toml
python_ai_server/app/: fake_ai.py  main.py
python_ai_server/tests/: test_ai_contract.py
(+58 files in other folders)
